Repeated code put inside template

--- a/Blog/templates/Blog/home.html
+++ b/Blog/templates/Blog/home.html
@@ -1,59 +1,5 @@
 {% extends "Blog/base.html" %}
 {% block content %}
-{% with domain='https://staycurious.in' %}
-{% for post in posts %}
-<article class="media content-section">
-    <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
-    <div class="media-body">
-        <div class="article-metadata">
-            <a class="mr-2" href="{% url 'Blog:user-posts' post.author.username %}">{{ post.author }}</a>
-            <small class="text-muted">{{ post.date_posted|date:"j M Y" }}</small>
-        </div>
-        <h2><a class="article-title" href="{% url 'Blog:post-detail' post.slug %}">{{ post.title }}</a></h2>
-        <p class="article-short-des">{{ post.short_des|truncatewords_html:'50' }}&nbsp<span><a href="{% url 'Blog:post-detail' post.slug %}">Read more</a></p>
-        {% comment %} {% for tag in post.tags|make_list %}
-            <p class="article-tags">{{ tag }}</p>
-        {% endfor %} {% endcomment %}
-        {% for tag in post.get_tags_list %}
-            <a href="{% url 'Blog:tagged' tag%}"><p class="article-tags">{{ tag }}</p></a>
-        {% endfor %}        
-    </div>
-    <ul class="list-unstyled share-icon mt-2 mb-2 float-right">
-    {% url 'Blog:post-detail' post.slug as link %}
-    {% with domain|add:link as link %}
-        <li><a href="http://www.facebook.com/sharer.php?u={{link}}" rel="nofollow noopener noreferrer" target="_blank"><i class="fa fa-facebook ml-2 mr-2"></i></a></li>
-        <li><a href="http://www.twitter.com/share?text={{post.title}}&url={{link}}" rel="nofollow noopener noreferrer" target="_blank"><i class="fa fa-twitter ml-2 mr-2"></i></a></li>
-        <li><a href="http://www.linkedin.com/shareArticle?mini=true&url={{link|urlencode:''}}&title={{post.title|urlencode}}&source=StayCurious-Blog" rel="nofollow noopener noreferrer" target="_blank" ><i class="fa fa-linkedin ml-2 mr-2"></i></a></li>
-        <li><a href="http://www.reddit.com/submit?url={{link}}post-to-reddit-via-url&titile={{post.title|urlencode}}" rel="nofollow noopener noreferrer" target="_blank"><i class="fa fa-reddit ml-2 mr-2"></i></a></li>
-        {# <li><a href="http://www.pinterest.com/pin/create/link/u={{link|urlencode:''}}&description={{post.title|urlencode}}" rel="nofollow noopener noreferrer" target="_blank"><i class="fa fa-pinterest ml-2 mr-2"></a></li> #}
-        {% comment %} <p class="link" style="display:none">{{link}}</p> {% endcomment %}
-        <li><a class="btn copy" data-text={{link}} title="Copy link"><i class="fa fa-clipboard"></i></a></li>
-        {# <li><button class="copy" onclick="C opy({{link}})"><img class="ml-2 mr-2" src="{% static 'img/copy.png' %}" alt="Copy to clipboard" style="width:40px"></button></li> #}
-        {% if post.id in profile.get_bookmarked_posts %}
-        <li><a id="unbookmark" class="btn bookmark" data-post={{post.slug}} data-url={% url 'Blog:bookmark-post'%} title="Remove from bookmark"><i class="fa fa-bookmark" style="color:steelblue"></i></a></li>
-        {% else %}
-        <li><a id="bookmark" class="btn bookmark" data-post={{post.slug}} data-url={% url 'Blog:bookmark-post'%} title="Bookmark this post"><i class="fa fa-bookmark" style="color:darkgrey"></i></a></li>
-        {% endif %}
-    {% endwith %}
-    </ul>
-</article>
-{% endfor %}
-{% if is_paginated %}
-    {% if page_obj.has_previous %}
-        <a class="btn btn-outline-info ml-3 mb-4" href="?page=1">First</a>
-        <a class="btn btn-outline-info ml-3 mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
-    {% endif %}
-    {% for num in page_obj.paginator.page_range %}
-        {% if page_obj.number == num %}
-        <a class="btn btn-info ml-3 mb-4" href="?page={{num}}">{{num}}</a>
-        {% elif num > obj.page_obj.number|add:'-3' and num > obj.page_obj.number|add:'3' %}
-            <a class="btn btn-outline-info ml-3 mb-4" href="?page={{num}}">{{num}}</a>
-        {% endif %}
-    {% endfor %}
-    {% if page_obj.has_next %}
-        <a class="btn btn-outline-info ml-3 mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
-        <a class="btn btn-outline-info ml-3 mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
-    {% endif %}
-{% endif %}
-{% endwith %}
+{% include "post_list.html" %}
+{% include "paginate.html" %}
 {% endblock content %}
