use case for no boookmark added

--- a/Blog/templates/Blog/user_bookmarks.html
+++ b/Blog/templates/Blog/user_bookmarks.html
@@ -1,7 +1,11 @@
 {% extends "Blog/base.html" %}
 {% block content %}
+{% if page_obj.paginator.count %}
 <h3 class="mb-3">Total Bookmarked Posts ({{ page_obj.paginator.count }})</h3>
 {% comment %} {% for post in posts  %}{% with post.short_des as None %}{% endwith %}{% endfor %} {% endcomment %}
 {% include "post_list.html" %}
 {% include "paginate.html" %}
+{% else %}
+<h5 class="mt-5"> You are yet to bookmark a post. Get back to <a href="{% url 'Blog:home' %}">reading</a>.</h5>
+{% endif %}
 {% endblock content %}
