Edit profile is more apt for the link

--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -43,7 +43,7 @@
                         <i class="fa fa-caret-down"></i>
                         <div class="dropdown-content">
                             <p class="ml-3">Signed in as <strong>{{user.username}}</strong><p>
-                            <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+                            <a class="nav-item nav-link" href="{% url 'profile' %}">Edit Profile</a>
                             <a class="nav-item nav-link" href="{% url 'Blog:post-create' %}">New Post</a>
                             <a class="nav-item nav-link" href="{% url 'Blog:my-posts' user %}">My Posts</a>
                             <a class="nav-item nav-link" href="{% url 'Blog:user-bookmarks' user %}">Bookmarks</a>
