--- a/Blog/templates/Blog/user_posts.html
+++ b/Blog/templates/Blog/user_posts.html
@@ -26,7 +26,7 @@
                 {% if author.profile.website %}
                 <li class="user-website mt-2">
                     <span>
-                        <i class="fa fa-external-link fa-fw mr-2"></i><a href="{{author.profile.website}}" target="_blank">{{ author.profile.website }}</a>
+                        <i class="fa fa-external-link fa-fw mr-2"></i><a href="//{{author.profile.website}}" target="_blank">{{ author.profile.website }}</a>
                     </span>
                 </li>
                 {% endif %}
