--- a/Blog/templates/Blog/post_detail.html
+++ b/Blog/templates/Blog/post_detail.html
@@ -26,9 +26,7 @@
             </div>
         </div>
         <p class="article-content">{{ object.content }}</p>
-        {% for tag in object.get_tags_list %}
-        <a href="{% url 'Blog:tagged' tag%}"><p class="article-tags">{{ tag }}</p></a>
-        {% endfor %}
+        {% include "post_tags.html" %}
     </div>
    
 </article>
