adds views initial functionality

--- a/Blog/templates/Blog/post_detail.html
+++ b/Blog/templates/Blog/post_detail.html
@@ -28,6 +28,6 @@
         <p class="article-content">{{ object.content }}</p>
         {% include "post_tags.html" %}
     </div>
-   
+   <h1>{{object.hit_count}}</h1>
 </article>
 {% endblock content %}
