--- a/Blog/templates/post_list.html
+++ b/Blog/templates/post_list.html
@@ -5,6 +5,7 @@
         <div class="article-metadata">
             <a class="mr-2" href="{% url 'Blog:user-posts' post.author.username %}">{{ post.author }}</a>
             <small class="text-muted">{{ post.date_posted|date:"j M Y" }}</small>
+            <small class="text-muted">views:{{post.hit_count}}</small>
         </div>
         <h2><a class="article-title" href="{% url 'Blog:post-detail' post.slug %}">{{ post.title }}</a></h2>
         {% comment %} <p class="article-short-des">{{ post.short_des|truncatewords_html:'50'|safe }}</p> {% endcomment %}
