--- a/Blog/templates/post_list.html
+++ b/Blog/templates/post_list.html
@@ -9,7 +9,7 @@
         <h2><a class="article-title" href="{% url 'Blog:post-detail' post.slug %}">{{ post.title }}</a></h2>
         {% comment %} <p class="article-short-des">{{ post.short_des|truncatewords_html:'50'|safe }}</p> {% endcomment %}
         <p class="article-short-des">{{ post.content|truncatewords_html:'50' }}&nbsp<span><a href="{% url 'Blog:post-detail' post.slug %}">Read more</a></p>
-        {% include "post_tags.html" %}
+        {% include "tags.html" with tags=post.get_tags_list %}
     </div>
 {% include "share.html" %}
 </div>
