-> Background colour to sidebar elements helps them in standing out -> Bringing in latest posts from the server -> Adding latest posts to the sidebar -> Handles template view of the post titles in the sidebar -> Handling requests for latest-posts -> Responding with latest post to requests -> db changes

--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -78,6 +78,12 @@ a.dropdown-toggle {
     font-weight: 700;
 }
 
+#latest-posts,
+#top-tags,
+#all-tags {
+    background-color: #f8f8ff;
+}
+
 .content-section {
     background: #ffffff;
     padding: 10px 20px;
