--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -13,7 +13,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    {% comment %} <script src="https://kit.fontawesome.com/e8c126582c.js"></script> {% endcomment %}
     <script src="{% static 'Blog/main.js' %}"></script>
     <script>window.CSRF_TOKEN="{{ csrf_token }}"</script>
     {% comment %} <script type="text/javascript">
@@ -89,13 +88,12 @@
                 {% block content %}
                 {% endblock %}
             </div>
-                <div class="col-md-4 content-section">
-                    <h3>Our Sidebar</h3>
-                    <p class='text-muted'>You can put any information here you'd like.
+                <div id="sidebar" class="col-md-4 content-section">
+                    {% comment %} <h3>Our Sidebar</h3> {% endcomment %}
+                    {% comment %} <p class='text-muted'>You can put any information here you'd like. {% endcomment %}
                         <ul class="list-group">
-                            <li class="list-group-item list-group-item-light">Latest Posts</li>
-                            {% comment %} <li class="list-group-item list-group-item-light">Calendars</li> {% endcomment %}
-                            <li id="top-tags" class="list-group-item list-group-item-light" data-url='{% url "Blog:top-tags" %}?num=5'>Top Tags<br></li>
+                            <li id="latest-posts" class="list-group-item list-group-item-light" data-url='{% url "Blog:latest-posts" %}'>Latest Posts</li>
+                            <li id="top-tags" class="list-group-item list-group-item-light" data-url='{% url "Blog:top-tags" %}'>Top Tags<br></li>
                             {% comment %} <h5>Top Tags</h5> {% endcomment %}
                             <li id="all-tags" class="list-group-item list-group-item-light" data-url='{% url "Blog:all-tags" %}'>All Tags<br></li>
                             {% comment %} <h5>All Tags</h5> {% endcomment %}
