Meta title now ssend from home view

--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -27,8 +27,8 @@
             $('#all-tags').append(data)
         })
     </script> {% endcomment %}
-    {% if title %}
-    <title>Blog - {{title}}</title>
+    {% if meta_title %}
+    <title>Blog - {{meta_title}}</title>
     {% else %}
     <title></title>
     {% endif %}
