--- a/Blog/templates/Blog/post_detail.html
+++ b/Blog/templates/Blog/post_detail.html
@@ -19,9 +19,9 @@
                 <small class="text-muted">{{ object.date_posted|date:"j M Y" }}</small>
                 <small class="text-muted">views: {{object.hit_count}}</small>
                 {% if object.author == user %}
-                    <div style="float:right">
-                        <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'Blog:post-update' object.slug %}">Update</a>
-                        <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'Blog:post-delete' object.slug %}">Delete</a>
+                    <div id="post-options">
+                        <a class="btn btn-secondary btn-sm mt-1 mb-1 ml-2" href="{% url 'Blog:post-update' object.slug %}">Update</a>
+                        <a class="btn btn-danger btn-sm mt-1 mb-1 ml-2" href="{% url 'Blog:post-delete' object.slug %}">Delete</a>
                     </div>
                 {% endif %}
                 <div class="article-title">
