-> Pages made compatible for small screen devices -> Share icons removed as they appeared hard on the eye -> Share Text adds info especially on small screen devices -> Sending only published posts to the user's postlistview -> db changes

--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -89,7 +89,7 @@ a.dropdown-toggle {
     padding: 10px 20px;
     border: 1px solid #dddddd;
     border-radius: 3px;
-    margin-bottom: 20px;
+    margin-bottom: 2px;
 }
 
 .article-title {
@@ -101,8 +101,11 @@ a.article-title:hover {
     text-decoration: none;
 }
 
-.article-content,
-.article-short-des {
+.article-short-des p {
+    display: inline;
+}
+
+.article-content {
     white-space: pre-line;
 }
 
