--- a/Blog/templates/post_list.html
+++ b/Blog/templates/post_list.html
@@ -1,17 +1,22 @@
 {% for post in posts %}
 <div class="media content-section">
     <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
-    <div class="media-body">
-        <div class="article-metadata">
-            <a class="mr-2" href="{% url 'Blog:user-posts' post.author.username %}">{{ post.author }}</a>
-            <small class="text-muted">{{ post.date_posted|date:"j M Y" }}</small>
-            <small class="text-muted">views:{{post.hit_count}}</small>
+    <div>
+        <div class="media-body">
+            <div class="article-metadata">
+                <a class="mr-2" href="{% url 'Blog:user-posts' post.author.username %}">{{ post.author }}</a>
+                <small class="text-muted">{{ post.date_posted|date:"j M Y" }}</small>
+                <small class="text-muted">views:{{post.hit_count}}</small>
+            </div>
+            <h4><a class="article-title" href="{% url 'Blog:post-detail' post.slug %}">{{ post.title }}</a></h4>
+            {% comment %} <p class="article-short-des">{{ post.short_des|truncatewords_html:'50'|safe }}</p> {% endcomment %}
+            <div class="article-short-des" style="display:inline">
+                {{ post.content|truncatewords_html:'50' }}&nbsp
+                <a style="display:inline-block" href="{% url 'Blog:post-detail' post.slug %}">Read more</a>
+            </div><br>
+            {% include "tags.html" with tags=post.get_tags_list %}
         </div>
-        <h2><a class="article-title" href="{% url 'Blog:post-detail' post.slug %}">{{ post.title }}</a></h2>
-        {% comment %} <p class="article-short-des">{{ post.short_des|truncatewords_html:'50'|safe }}</p> {% endcomment %}
-        <p class="article-short-des">{{ post.content|truncatewords_html:'50' }}&nbsp<span><a href="{% url 'Blog:post-detail' post.slug %}">Read more</a></p>
-        {% include "tags.html" with tags=post.get_tags_list %}
+{% comment %} {% include "share.html" %} {% endcomment %}
     </div>
-{% include "share.html" %}
 </div>
 {% endfor %}
