--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -1,8 +1,10 @@
 {% load static %}
+{% load meta %}
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head {% meta_namespaces %}>
+    {% include 'meta/meta.html' %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -27,11 +29,11 @@
             $('#all-tags').append(data)
         })
     </script> {% endcomment %}
-    {% if meta_title %}
+    {% comment %} {% if meta_title %}
     <title>Blog - {{meta_title}}</title>
     {% else %}
     <title></title>
-    {% endif %}
+    {% endif %} {% endcomment %}
 </head>
 <header class="site-header">
     <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
