homepage revamp --wip

--- a/Blog/templates/Blog/home.html
+++ b/Blog/templates/Blog/home.html
@@ -1,5 +1,7 @@
 {% extends "Blog/base.html" %}
 {% block content %}
-{% include "post_list.html" %}
+{% comment %} {% include "post_list.html" %} {% endcomment %}
+{% include "post_card.html" %}
+{% include 'post_list.html'%}
 {% include "paginate.html" %}
 {% endblock content %}
