--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -78,6 +78,10 @@ a.dropdown-toggle {
     font-weight: 700;
 }
 
+#main {
+    margin: 2rem;
+}
+
 #latest-posts,
 #top-tags,
 #all-tags {
@@ -308,8 +312,86 @@ a.article-title:hover {
     /* font-size: 24px; */
 }
 
+.articles {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex: 1;
+}
+
+.row {
+    display: flex;
+}
+
+.article-card>.col {
+    flex: 1;
+}
+
+.article-card {
+    /* display: inline-flex; */
+    flex-direction: column;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    /* width: 28%; */
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    padding: 3px;
+    margin: 5px;
+}
+
+.article-card>.article-thumbnail {
+    /* display: flex; */
+    /* background-color: black; */
+    width: 100%;
+    height: 160px;
+    /* display: inline-block; */
+    /* makes it fit in like an <img> */
+    /* background-size: cover; */
+    /* or contain */
+    /* background-position: center center; */
+    /* background-repeat: no-repeat */
+}
+
+.article-card>.article-thumbnail>img {
+    /* max-width: 100%; */
+    width: 100%;
+    height: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.article-card:hover,
+.article-card:focus {
+    cursor: pointer;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.article-container {
+    padding: 0.5rem 1rem;
+}
+
+.article-list>.content-section>.article-thumbnail>img {
+    width: 162px;
+    height: 100px;
+}
+
+.article-list>#details {
+    margin: 1rem;
+}
+
+.col-md-4 {
+    width: 30%;
+}
+
 
 /* for small screen devices */
+
+@media (min-width: 768px) {
+    .col-md-4 {
+        max-width: 32% !important;
+    }
+}
 
 @media(max-width:600px) {
     #post-options {
