homepage revamp --wip

--- a/Blog/templates/post_list.html
+++ b/Blog/templates/post_list.html
@@ -1,6 +1,6 @@
-<div class="row article-list">
+<div class="container article-list">
     {% for post in posts %}
-    <div class="media content-section">
+    <div class="row media content-section">
         <div class="article-thumbnail col-md-3">
             <img src="https://picsum.photos/500/" alt="{{post.title}}" title="{{post.title}}">
         </div>
