--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -90,7 +90,7 @@ a.dropdown-toggle {
 
 .content-section {
     background: #ffffff;
-    padding: 10px 20px;
+    padding: 10px 10px;
     border: 1px solid #dddddd;
     border-radius: 3px;
     margin-bottom: 2px;
@@ -349,6 +349,7 @@ a.article-title:hover {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 7px;
 }
 
 .article-card:hover,
@@ -361,13 +362,9 @@ a.article-title:hover {
     padding: 0.5rem 1rem;
 }
 
-.article-list>.content-section>.article-thumbnail>img {
+.article-list>.article-thumbnail>img {
     width: 200px;
     height: 130px;
-}
-
-.article-list>#details {
-    margin: 1rem;
 }
 
 @media(max-width:600px) {
@@ -392,5 +389,13 @@ a.article-title:hover {
     } */
     #article-share-container {
         flex-direction: column-reverse;
+    }
+    .article-list>.article-thumbnail>img {
+        width: 100%;
+        height: 160px;
+    }
+    .article-list>.article-thumbnail {
+        padding-left: 0;
+        padding-right: 0;
     }
 }
