--- a/Blog/templates/post_list.html
+++ b/Blog/templates/post_list.html
@@ -1,6 +1,6 @@
-<div class="container article-list">
+<div class="category-articles">
     {% for post in posts %}
-    <div class="row media content-section">
+    <div class="row media content-section article-list">
         <div class="article-thumbnail col-md-3">
             <img src="https://picsum.photos/500/" alt="{{post.title}}" title="{{post.title}}">
         </div>
@@ -11,7 +11,7 @@
                     <small class="text-muted">{{ post.date_posted|date:"j M Y" }}</small>
                     <small class="text-muted ml-4">views:{{post.hit_count}}</small>
                 </div>
-                <h4><a class="article-title" href="{% url 'Blog:post-detail' post.slug %}">{{ post.title }}</a></h4>
+                <h5><a class="article-title" href="{% url 'Blog:post-detail' post.slug %}">{{ post.title }}</a></h5>
                 {% comment %} <p class="article-short-des">{{ post.short_des|truncatewords_html:'50'|safe }}</p> {% endcomment %}
                 <div class="article-short-des" style="display:inline">
                     {{ post.content|truncatewords_html:'50' }}&nbsp
