--- a/Blog/templates/Blog/post_detail.html
+++ b/Blog/templates/Blog/post_detail.html
@@ -20,8 +20,8 @@
                 <small class="text-muted">views: {{object.hit_count}}</small>
                 {% if object.author == user %}
                     <div id="post-options">
-                        <a class="btn btn-secondary btn-sm mt-1 mb-1 ml-2" href="{% url 'Blog:post-update' object.slug %}">Update</a>
-                        <a class="btn btn-danger btn-sm mt-1 mb-1 ml-2" href="{% url 'Blog:post-delete' object.slug %}">Delete</a>
+                        <a class="btn btn-secondary btn-sm mt-1 mb-1 ml-2" href="{% url 'Blog:post-update' object.date_posted.year object.date_posted.month object.date_posted.day object.slug %}">Update</a>
+                        <a class="btn btn-danger btn-sm mt-1 mb-1 ml-2" href="{% url 'Blog:post-delete' object.date_posted.year object.date_posted.month object.date_posted.day object.slug %}">Delete</a>
                     </div>
                 {% endif %}
                 <div class="article-title">
