--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -123,7 +123,8 @@ a.article-title:hover {
 .article-metadata {
     padding-bottom: 1px;
     margin-bottom: 4px;
-    border-bottom: 1px solid #e3e3e3
+    border-top: 1px solid #e3e3e3;
+    margin-left: 5px;
 }
 
 .article-metadata a:hover {
@@ -328,11 +329,11 @@ a.article-title:hover {
 }
 
 .article-card {
-    /* display: inline-flex; */
+    display: flex;
     flex-direction: column;
+    justify-content: space-between;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
-    /* width: 28%; */
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
 }
@@ -359,12 +360,21 @@ a.article-title:hover {
 }
 
 .article-container {
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 5px;
 }
 
 .article-list>.article-thumbnail>img {
     width: 200px;
     height: 130px;
+}
+
+.tags {
+    margin-top: 5px;
+}
+
+#details>.article-contents {
+    display: flex;
+    flex-direction: column;
 }
 
 @media(max-width:600px) {
@@ -397,5 +407,8 @@ a.article-title:hover {
     .article-list>.article-thumbnail {
         padding-left: 0;
         padding-right: 0;
+    }
+    #details {
+        padding: 5px 5px;
     }
 }
